fixed body overflow problem

--- a/_sass/queries/_base.scss
+++ b/_sass/queries/_base.scss
@@ -83,7 +83,7 @@ html {
 body {
   font-family: $base-font-family;
   background: #fff;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 /*================================
